--- a/nutrafit/templates/base.html
+++ b/nutrafit/templates/base.html
@@ -10,7 +10,7 @@
 <link rel="icon" type="image/png" sizes="16x16" href="/static/favicon-16x16.png"> -->
 
   {% if title %}
-  <title>NUTRAFIT- {{title}}</title>
+  <title>NUTRAFIT - {{title}}</title>
   {% else %}
     <title>NUTRAFIT </title>
   {% endif %}
@@ -36,12 +36,7 @@
 
 
     {% block content %} 
-    <!-- <div class="jumbotron jumbotron-fluid bg-info mb-1 pb-3 pt-4">
-        <div class="">
-          <h2 class="display-5 text-center font-weight-bold text-white text-uppercase">JIRANI TRENDS</h2>
-          <p class="text-center font-weight-bold text-uppercase">SELECT YOUR NEIGHBORHOOD TO GET STARTED</p>
-        </div>
-      </div> -->
+    
     
     {%endblock%}
   
@@ -65,7 +60,7 @@
     {% endblock %}
 
    <!-- Footer -->
-<footer class="page-footer font-small font-weight-bold  mt-4 pt-4" style="background-color: rgb(2, 5, 0) ; color: white;">
+<footer class="page-footer font-small font-weight-bold  mt-2 " style="background-color: rgb(10, 44, 12) ; color: white;height: 7vh;">
 
     <!-- Copyright -->
     <div class="footer-copyright text-center py-3">© 2022 Copyright.
