--- a/nutrafit/templates/new-post.html
+++ b/nutrafit/templates/new-post.html
@@ -4,9 +4,9 @@
 {% block content%}
 
 
-    <div class="jumbotron jumbotron-fluid bg-white pb-3 pt-4 shadow" style="margin-top: 2%;">
+    <div class="jumbotron jumbotron-fluid bg-white pb-3 pt-4 shadow" style="margin-top: 1%;">
             
-       <h1 class="display-5 text-center font-weight-bold">Create new nutrition or fitness posts </h1>
+       <h1 class="display-5 text-center font-weight-bold" style="color: green;">Create new nutrition or fitness posts </h1>
     
     </div>      
 <div class="container">
@@ -14,13 +14,13 @@
       <!-- Empty div -->
       <div class="col-lg-3"></div>
 
-      <div class="col-lg-6 pt-2 shadow" style=" padding-bottom:10%;margin-top: 3%;margin-bottom: 4%;">
-            <form  action="{%url 'new-post'%}" method="post" style="padding-top: 3%;">
+      <div class="col-lg-6 pt-2 shadow" style=" padding-bottom:1%;margin-top: 1%;margin-bottom: 1%;">
+            <form  action="{%url 'new-post'%}" method="post" style="padding-top: 3%;" enctype="multipart/form-data">
               {%csrf_token%}
 
               {% bootstrap_form form%}
               
-              <input type="submit" class="btn btn-info btn-lg font-weight-bold" value="SUBMIT">
+              <input type="submit" class="btn btn-success btn-lg font-weight-bold" value="SUBMIT">
             </form>
       </div>
 
