--- a/nutrafit/templates/registration/profile.html
+++ b/nutrafit/templates/registration/profile.html
@@ -17,7 +17,9 @@
                 <h4> <span class="font-weight-bold"> Username:</span>  {{user.username}} </h4>
         <p> <span class="font-weight-bold"> Email:</span>  {{user.email}} </p>
         <p> <span class="font-weight-bold"> Bio:</span> {{ user.profile.bio}}  </p>
-        
+        <!-- <a href="{% url 'profile' %}"><button type="button" class="btn btn-outline-info btn-sm mx-auto"><i
+          class="fa-solid fa-pen-to-square"></i>Edit profile</button></a>
+         -->
         <button class="btn btn-md btn-outline-info font-weight-bold" data-toggle="modal" data-target="#profile"> Edit Profile</button>
         </div>
         <hr>
@@ -70,44 +72,7 @@
   </div>
 </div>
 
-<!-- start of Neighborhood form  -->
-
-<div class="modal fade" id="neighborhood" tabindex="-1" role="dialog" aria-labelledby="exampleModal3Label" aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModal3Label"></h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        
-           <div>
-            <!-- neighboorhood update form  -->
-                  <h4 class="font-weight-bold">Add Neighborhood</h4>
-                  <hr class="">
-                  <form  method="post">
-                  {% csrf_token %}
-                  {% bootstrap_form form2 %}
-
-                  <div class="form-group">
-                  <button type="submit" class="btn blue-gradient btn-lg mt-2 font-weight-bold btn-block"> Add Neighborhood </button>
-                  </div>
-
-                  <input type="hidden" name="next" value="{{next}}">
-
-              </form>
-          </div>
-
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary btn-md" data-dismiss="modal">Close</button>
-        <!-- <button type="button" class="btn btn-primary">Save changes</button> -->
-      </div>
-    </div>
-  </div>
 
 
-</div>
+
 {% endblock %}
