added professionals contact info

--- a/nutrafit/templates/index.html
+++ b/nutrafit/templates/index.html
@@ -2,7 +2,7 @@
 {%block content%}
 
 {% if user.is_authenticated %}
-<div class="container-fluid shadow" style="height: 80vh;width:94%;margin-top:1%;background-image: url(/static/images/nutrafit1.jpg );">
+<div class="container shadow" style="height: 50vh;width:94%;margin-top:3%;background-image: url(/static/images/nutrition3.jpg );">
   <h1  style="padding-top: 7%;padding-left:10%;color: green;"></h1>
 </div>
 
@@ -10,7 +10,7 @@
   <div class="container ">
     <h1 style="color: green;margin-top: 3%;">Nutrition | Fitness | Tips </h1>
     <hr>
-    <ul>
+    <!-- <ul>
       <li class="dropdown list-unstyled text-black">
           <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink-4" data-toggle="dropdown"
           aria-haspopup="true" aria-expanded="false" href="/category/{{category.name}}" style="color: rgb(7, 34, 7); font-weight:bold;"> 
@@ -29,7 +29,7 @@
       </li>
 
       
-    </ul>
+    </ul> -->
    
     <div class="container">
       <div class="row">
