--- a/nutrafit/templates/navbar.html
+++ b/nutrafit/templates/navbar.html
@@ -41,7 +41,9 @@
         <li class="nav-item">
           <a class="nav-link font-weight-bold" href="{%url 'new-post'%}" style="color: black;"> NEW POST </a>
         </li>
-        
+        <li class="nav-item">
+          <a class="nav-link font-weight-bold" href="{%url 'contact'%}" style="color: black;"> PROFESSIONALS </a>
+        </li>
         
         
         
