fix:edited single post display

--- a/nutrafit/templates/single_post.html
+++ b/nutrafit/templates/single_post.html
@@ -20,7 +20,7 @@
 
 
             <a href="{%url 'comment' post.id%}" class="btn" style="background-color: rgb(13, 77, 13); color:white;font-weight:bold;">Comment</a>
-            {% if not liked %}
+            <!-- {% if not liked %}
           <a href="{%url 'like_post' post.id%}" class="btn btn-success">Like</a>
           {%else%}
           <a href="{%url 'like_post' post.id%}" class="btn btn-danger"
@@ -28,7 +28,7 @@
           >
           {% endif %}
 
-          <p class="mt-4">Number of likes : {{likes_count}}</p>
+          <p class="mt-4">Number of likes : {{likes_count}}</p> -->
 
           <h3 style="color: rgb(10, 65, 10);"> <b>Post comments</b></h3> <hr>
           <ul>
