--- a/nutrafit/templates/navbar.html
+++ b/nutrafit/templates/navbar.html
@@ -7,7 +7,8 @@
     <!-- Collapse button -->
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#basicExampleNav"
       aria-controls="basicExampleNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
+      <i class="fas fa-bars"></i>
+      <!-- <span class="navbar-toggler-icon"></span> -->
     </button>
   
     <!-- Collapsible content -->
